--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -5,3 +5,10 @@ pydantic==2.12.5
 python-multipart==0.0.20
 google-cloud-storage==3.6.0
 python-magic==0.4.27
+langgraph==1.0.4
+langchain==1.1.0
+langchain-core==1.1.0
+langchain-openai==1.1.0
+langchain-qdrant==1.1.0
+langchain-community==1.0.0a1
+qdrant-client==1.16.1
